# win32-stratagus-dependencies

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  build.bat
fluidsynth-deps/include/: dsound.h.ll
fluidsynth-deps/manifest/: glib-dev_2.24.0-2_win32.mft  glib_2.24.0-2_win32.mft  proxy-libintl-dev_20090911_win32.mft
libtheora-1.1.1/win32/VS2008/: UpgradeLog2.htm
libtheora-1.1.1/win32/VS2008/Backup2/: libtheora_static.sln
libtheora-1.1.1/win32/VS2008/Backup2/dump_video/: dump_video_static.vcxproj
libtheora-1.1.1/win32/VS2008/Backup2/encoder_example/: encoder_example_static.vcxproj
libtheora-1.1.1/win32/VS2008/Backup2/libtheora/: libtheora_static.vcxproj
lua-5.1.5/: CMakeLists.txt
lua-5.1.5/src/: CMakeLists.txt
lua-5.1.5/toluapp-simple/: CMakeLists.txt
